# MDS7202

./: README.md  mlflow.db  pyproject.toml
Proyecto final/: .dockerignore  Enunciado_Parte1_Analisis.ipynb  Enunciado_Parte2_Modelo.ipynb  Enunciado_Parte3_Despliegue.ipynb  docker-compose.yml  mlflow.db  modelo_final.pkl
Proyecto final/backend/: Dockerfile  generate_prediction.py  main.py  model.pkl  models.py  pyproject.toml
Proyecto final/data/: tickets.parquet
Proyecto final/frontend/: Dockerfile  app.py  pyproject.toml  services.py
Proyecto final/mlruns/1/0a88680674334213baf2f6bee17e4a95/artifacts/: classification_report_test.txt
Proyecto final/mlruns/1/3e39912e3a9a48b6be68ecb3973342a3/artifacts/: classification_report_test.txt
Proyecto final/mlruns/1/803096e95304430d9fff1ab540effbc4/artifacts/: classification_report_test.txt
Proyecto final/mlruns/1/b520c0c9828a4e1a96b8b84e8827921a/artifacts/: classification_report_test.txt
Proyecto final/mlruns/1/bbdcd1a956f246d8bca4afd742d58382/artifacts/: classification_report_test.txt
Proyecto final/mlruns/1/ca109cd54588493b9f2381c0a4a16cc9/artifacts/: classification_report_test.txt
Proyecto final/mlruns/1/d92c23d3da2140feb3346710b9857551/artifacts/: classification_report_test.txt
labs/lab_1/: Laboratorio_1.ipynb
labs/lab_3/: Lab3_Enunciado.ipynb
labs/lab_5/: Lab5_enunciado.ipynb
labs/lab_6/: Lab6_Enunciado.ipynb  documentacion_dataset.md
labs/lab_7/: Lab7_enunciado.ipynb
labs/lab_8/: .dockerignore  Dockerfile  Lab8_enunciado.ipynb  main.py  requirements.txt
(+35 files in other folders)
