[project]
name = "chaucherapp-backend"
version = "0.1.0"
description = "Backend FastAPI para priorización de tickets"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pandas",
    "numpy",
    "scikit-learn==1.6.1",
    "joblib",
    "google-generativeai",
]

[tool.uv]
package = false