[project]
name = "chaucherapp-frontend"
version = "0.1.0"
description = "Frontend Gradio para priorización de tickets"
requires-python = ">=3.10,<3.12"
dependencies = [
    "gradio==4.44.1",
    "fastapi==0.112.4",
    "starlette==0.38.6",
    "huggingface-hub==0.25.2",
    "requests",
    "python-dotenv",
]

[tool.uv]
package = false